Affichage de la calculatrice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>calculatrice</title>
+    <title>Calculatrice</title>
 
     <!-- Balises contenant des méta-données -->
     <meta name="author" content="Romain GILOT">
@@ -20,6 +20,8 @@
 
     <!-- Imporation du fichier css -->
     <link rel="stylesheet" href="style.css">
+    
+    <link rel="shortcut icon" href="./Images/Calculator.ico" type="image/x-icon">
 
 </head>
 <body>
